--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,7 +24,8 @@
 		This friendly message is coming from:
 		<ul>
 			<p>Léooo</p>
-            <p>Jonasssss</p>
+			<p>Jonasssss</p>
+			<p>LOUISON ^^</p>
 		</ul>
 	</div>
 {% endblock %}
