demo with pseudo rooms

--- a/templates/forum/index.html.twig
+++ b/templates/forum/index.html.twig
@@ -14,12 +14,12 @@
 
 		<div class="forumRules">
 			<h4 class="forumRules__h4">Bienvenue sur le forum de POG</h4>
-			<p>Ici, tu es libre de poser des questions à toutes la communauté POG, sur un sujet en particulier.&nbspMais avant de commancer, merci de prendre connaissance des règles suivantes :</p>
+			<p>Ici, tu es libre de poser des questions à toutes la communauté POG, sur un sujet en particulier.&nbspMais tout d'abord, merci de prendre connaissance des règles suivantes :</p>
 
 			<ul>
 				<li>Avant de poster une nouvelle question,
 					<strong>vérifie que personne ne l’a posée avant toi
-					</strong>. Pour cela, tu peux utiliser la barre de recherche en dessous.
+					</strong>. Pour cela, tu peux utiliser la barre de recherche ci-dessous.
 				</li>
 				<br/>
 				<li>
@@ -31,10 +31,35 @@
 			<p>Bon voyage sur le forum !</p>
 		</div>
 
-		<div class="forumRoomSearch">
+		<div id="test" class="forumRoomSearch">
 			<input type="text" placeholder="Rechercher un sujet de discussion">
 		</div>
 
+		<div class="roomGrid">
+			<header>
+				<p>Titre</p>
+				<p>Créée le</p>
+				<p>Nombre de message</p>
+			</header>
+			<div class="roomCard">
+				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
+				<p class="roomCardDate">15/02/2021</p>
+				<p class="roomCardMessage">5</p>
+			</div>
+			<div class="roomCard">
+				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
+				<p class="roomCardDate">15/02/2021</p>
+				<p class="roomCardMessage">5</p>
+			</div>
+		</div>
 
+		<span class="arrow">
+			<a href="#test"><img src="../src/assets/img/arrow.png"></a>
+		</span>
 	</div>
+
+
+	<footer>
+		<p>Ici le footer</p>
+	</footer>
 {% endblock %}
