--- a/public/app.css
+++ b/public/app.css
@@ -1,9 +1,11 @@
 body {
   background-color: #252525;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #fff;
 }
 
-header {
-  color: aliceblue;
+footer {
+  border-top: 1px solid blue;
 }
 
 .forum__h1 {
@@ -14,12 +16,11 @@ header {
   line-height: 130px;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #dfdfdf;
+  color: #fff;
   text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 42px rgb(230, 18, 124), 0 0 77px rgb(230, 18, 124), 0 0 100px rgb(230, 18, 124);
 }
 
 .forumRules {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: rgb(212, 211, 211);
   box-sizing: border-box;
   background: #252525;
@@ -37,7 +38,7 @@ header {
 
 .forumRoomSearch {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 130px;
 }
 .forumRoomSearch input {
   box-sizing: border-box;
@@ -51,23 +52,70 @@ header {
   background-position: 97%;
   background-repeat: no-repeat;
   background-size: 2.8em;
-  transition: box-shadow 0.6s;
+  transition: box-shadow 0.6s, background-color 0.6s;
+  padding-left: 15px;
 }
 .forumRoomSearch input::-moz-placeholder {
   color: rgb(201, 201, 201);
   font-size: 15px;
-  padding-left: 15px;
 }
 .forumRoomSearch input::placeholder {
   color: rgb(201, 201, 201);
   font-size: 15px;
-  padding-left: 15px;
 }
 .forumRoomSearch input:hover {
   box-shadow: 0px 0px 20px rgba(255, 94, 191, 0.925);
 }
-.forumRoomSearch input:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
+.forumRoomSearch input:focus {
+  outline: none;
+  background-color: rgba(255, 94, 191, 0.4039215686);
+}
+
+.roomGrid {
+  margin-top: 70px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.roomGrid header {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+  margin-left: 5px;
+}
+.roomGrid .roomCard {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+  border: 3px solid #FFFF00;
+  box-shadow: 0px 0px 15px rgba(255, 252, 94, 0.5);
+  border-radius: 20px;
+  margin-bottom: 50px;
+  height: 110px;
+  align-items: center;
+}
+.roomGrid .roomCard .roomCardTitle {
+  font-size: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0px 10px 0px 13px;
+}
+.roomGrid .roomCard .roomCardDate {
+  margin-left: 0;
+}
+.roomGrid .roomCard .roomCardMessage {
+  text-align: center;
+}
+
+.arrow {
+  left: 50%;
+  height: 50px;
+  position: sticky;
+  bottom: 20px;
+  transition: filter 0.4s;
+}
+.arrow img {
+  height: 50px;
+}
+
+.arrow:hover {
+  filter: drop-shadow(0px 0px 5px rgba(255, 94, 191, 0.925));
 }
