--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,24 +4,10 @@
 {% endblock %}
 
 {% block body %}
-	<style>
-		.example-wrapper {
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
-		}
-	</style>
-
+	{% block navbar %}
+		{% include 'navbar.html.twig' %}
+	{% endblock %}
 	<div class="example-wrapper">
-		<h1>Hello
-			{{ controller_name }}! ✅</h1>
-
-		This friendly message is coming from:
 		<ul>
 			<p>Léooo</p>
 			<p>Jonasssss</p>
