--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,9 +4,11 @@
 {% endblock %}
 
 {% block body %}
-	{% block navbar %}
-		{% include 'navbar.html.twig' %}
-	{% endblock %}
+	<div class="">
+		{% block navbar %}
+			{% include 'navbar.html.twig' %}
+		{% endblock %}
+	</div>
 	<div class="example-wrapper">
 		<ul>
 			<p>Léooo</p>
