--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,8 +8,8 @@
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-            <link href="/assets/css/all.css">
-            <link href="/assets/css/style.css">
+            <link rel="stylesheet" href="/assets/css/all.css">
+            <link rel="stylesheet" href="/assets/css/test.css">
         {% endblock %}
 
         {% block javascripts %}
