--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,6 +1,5 @@
 body {
   background-color: #252525;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #fff;
 }
 
@@ -16,6 +15,7 @@ footer {
   line-height: 130px;
   text-align: center;
   letter-spacing: 0.05em;
+  margin-bottom: 50px;
   color: #fff;
   text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 42px rgb(230, 18, 124), 0 0 77px rgb(230, 18, 124), 0 0 100px rgb(230, 18, 124);
 }
@@ -72,7 +72,7 @@ footer {
 }
 
 .roomGrid {
-  margin-top: 70px;
+  margin-top: 150px;
   margin-left: 100px;
   margin-right: 100px;
 }
@@ -81,15 +81,19 @@ footer {
   grid-template-columns: 3fr 1fr 1fr;
   margin-left: 5px;
 }
+.roomGrid .roomCardMessage {
+  text-align: center;
+}
 .roomGrid .roomCard {
   display: grid;
   grid-template-columns: 3fr 1fr 1fr;
   border: 3px solid #FFFF00;
   box-shadow: 0px 0px 15px rgba(255, 252, 94, 0.5);
   border-radius: 20px;
-  margin-bottom: 50px;
-  height: 110px;
+  margin-bottom: 100px;
+  height: 150px;
   align-items: center;
+  background-color: #1f1f1f;
 }
 .roomGrid .roomCard .roomCardTitle {
   font-size: 20px;
@@ -101,19 +105,46 @@ footer {
 .roomGrid .roomCard .roomCardDate {
   margin-left: 0;
 }
-.roomGrid .roomCard .roomCardMessage {
-  text-align: center;
+
+.roomCard:nth-child(6n+1) {
+  border-color: #ff6666;
+  box-shadow: 0px 0px 15px #ff6666;
+}
+
+.roomCard:nth-child(6n+2) {
+  border-color: #6666ff;
+  box-shadow: 0px 0px 15px #6666ff;
+}
+
+.roomCard:nth-child(6n+3) {
+  border-color: #ffc966;
+  box-shadow: 0px 0px 15px #ffc966;
+}
+
+.roomCard:nth-child(6n+4) {
+  border-color: #00e600;
+  box-shadow: 0px 0px 15px #00e600;
+}
+
+.roomCard:nth-child(6n+5) {
+  border-color: #ffff66;
+  box-shadow: 0px 0px 15px #ffff66;
+}
+
+.roomCard:nth-child(6n+6) {
+  border-color: #e600e6;
+  box-shadow: 0px 0px 15px #e600e6;
 }
 
 .arrow {
   left: 50%;
-  height: 50px;
   position: sticky;
-  bottom: 20px;
+  bottom: 40px;
   transition: filter 0.4s;
 }
 .arrow img {
   height: 50px;
+  margin-bottom: 20px;
 }
 
 .arrow:hover {
