--- a/public/assets/sass/_forum.scss
+++ b/public/assets/sass/_forum.scss
@@ -7,7 +7,6 @@ $forum__rules--color : rgb(212, 211, 211);
 
 body {
     background-color: #252525;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #fff;
 }
 
@@ -23,6 +22,7 @@ footer {
     line-height: 130px;
     text-align: center;
     letter-spacing: 0.05em;
+    margin-bottom: 50px;
 
     color: #fff;
     text-shadow:  0 0 7px #fff, 
@@ -88,7 +88,7 @@ footer {
 }
 
 .roomGrid {
-    margin-top: 70px;
+    margin-top: 150px;
     margin-left: 100px;
     margin-right: 100px;
     
@@ -98,15 +98,19 @@ footer {
         margin-left: 5px;
     }
     
+    .roomCardMessage {
+        text-align: center;
+    }
     .roomCard {
         display: grid;
         grid-template-columns: 3fr 1fr 1fr;
         border: 3px solid #FFFF00;
         box-shadow: 0px 0px 15px rgba(255, 252, 94, 0.5);
         border-radius: 20px;
-        margin-bottom: 50px;
-        height: 110px;
+        margin-bottom: 100px;
+        height: 150px;
         align-items: center;
+        background-color: #1f1f1f;
 
         .roomCardTitle {
             font-size: 20px;
@@ -121,26 +125,30 @@ footer {
             margin-left: 0;
         }
 
-        .roomCardMessage {
-            text-align: center;
-        }
+    }
+}
+
+$colors: red, blue, orange, green, yellow, purple;
+
+@for $i from 1 through length($colors) {
+    .roomCard:nth-child(#{length($colors)}n+#{$i}) {
+        border-color: lighten(nth($colors, $i), 20%);
+        box-shadow: 0px 0px 15px lighten(nth($colors, $i), 20%);
     }
 }
 
 
-
 .arrow {
     left: 50%;
-    height: 50px;
     position : sticky; 
-    bottom : 20px;
+    bottom : 40px;
     transition: filter 0.4s;
     img {
         height: 50px;
+        margin-bottom: 20px;
     }  
 }
 .arrow:hover {
     filter: drop-shadow(0px 0px 5px rgba(255, 94, 191, 0.925));
 
 }
-
