--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -48,7 +48,7 @@ footer {
   border: 3px solid #FF5EBE;
   box-shadow: 0px 0px 15px rgba(255, 94, 190, 0.5);
   border-radius: 20px;
-  background-image: url("../src/assets/img/chercher2.png");
+  background-image: url("../img/chercher2.png");
   background-position: 97%;
   background-repeat: no-repeat;
   background-size: 2.8em;
@@ -87,8 +87,7 @@ footer {
 .roomGrid .roomCard {
   display: grid;
   grid-template-columns: 3fr 1fr 1fr;
-  border: 3px solid #FFFF00;
-  box-shadow: 0px 0px 15px rgba(255, 252, 94, 0.5);
+  border: 3px solid;
   border-radius: 20px;
   margin-bottom: 100px;
   height: 150px;
@@ -134,6 +133,12 @@ footer {
 .roomCard:nth-child(6n+6) {
   border-color: #e600e6;
   box-shadow: 0px 0px 15px #e600e6;
+}
+
+a:link, a:visited {
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .arrow {
