--- a/templates/forum/index.html.twig
+++ b/templates/forum/index.html.twig
@@ -35,56 +35,30 @@
 			<input type="text" placeholder="Rechercher un sujet de discussion">
 		</div>
 
+
+		<div>
+			<a href="{{ path('app_room_new') }}">Créer une nouvelle discussion</a>
+		</div>
+
 		<div class="roomGrid">
 			<header>
 				<p>Titre</p>
 				<p>Créée le</p>
 				<p class="roomCardMessage">Nombre de message</p>
 			</header>
-			<div class="roomCard">
-				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
-				<p class="roomCardDate">15/02/2021</p>
-				<p class="roomCardMessage">5</p>
-			</div>
-			<div class="roomCard">
-				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
-				<p class="roomCardDate">15/02/2021</p>
-				<p class="roomCardMessage">5</p>
-			</div>
-			<div class="roomCard">
-				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
-				<p class="roomCardDate">15/02/2021</p>
-				<p class="roomCardMessage">5</p>
-			</div>
-			<div class="roomCard">
-				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
-				<p class="roomCardDate">15/02/2021</p>
-				<p class="roomCardMessage">5</p>
-			</div>
-			<div class="roomCard">
-				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
-				<p class="roomCardDate">15/02/2021</p>
-				<p class="roomCardMessage">5</p>
-			</div>
-			<div class="roomCard">
-				<p class="roomCardTitle">oskour j'ai un problème de fou c'est dingue wesh omg ça craint g peur popoipoi</p>
-				<p class="roomCardDate">15/02/2021</p>
-				<p class="roomCardMessage">5</p>
-			</div>
+
+			{# room et rooms de RoomController et ForumController #}
+			{% for room in rooms %}
+					<div class="roomCard">
+						<a href="{{ path('app_room_show', {id: room.id}) }}"><p class="roomCardTitle">{{ room.titleRoom }}</p></a>
+						<p class="roomCardDate">{{ room.dateRoom ? room.dateRoom|date('Y-m-d') : ''}}</p>
+						<p class="roomCardMessage">5</p>
+					</div>
+			{% endfor %}
 		</div>
 
-		{% for room in rooms %}
-			<tr>
-				<td>{{ room.id }}</td>
-				<td>{{ room.titleRoom }}</td>
-				<td>{{ room.dateRoom ? room.dateRoom|date('Y-m-d') : '' }}</td>
-				<td>{{ room.contentRoom }}</td>
-
-			</tr>
-		{% endfor %}
-
 		<span class="arrow">
-			<a href="#test"><img src="../src/assets/img/arrow.png"></a>
+			<a href="#test"><img src="assets/img/arrow.png"></a>
 		</span>
 	</div>
 
