--- a/templates/room/show.html.twig
+++ b/templates/room/show.html.twig
@@ -43,6 +43,9 @@
 		</p>
 	{% endif %}
 	{% endfor %}
+
+	{{ include('chat/new.html.twig') }}
+
 		<a href="{{ path('app_forum') }}"> Retourner sur le forum</a>
 
 	{# <a href="{{ path('app_room_index') }}">back to list</a> #}
