--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,16 +4,49 @@
 {% endblock %}
 
 {% block body %}
-	<div class="">
-		{% block navbar %}
-			{% include 'navbar.html.twig' %}
-		{% endblock %}
+	{# {{ dump(games) }} #}
+	<div class="LeoTest">
+		<img src="/assets/img/test.jpg" alt="">
 	</div>
-	<div class="example-wrapper">
-		<ul>
-			<p>Léooo</p>
-			<p>Jonasssss</p>
-			<p>LOUISON ^^</p>
-		</ul>
+	<div class="FirstViewBody">
+		<div class="LogoTitle">
+			<h1>PoG</h1>
+		</div>
+		<div class="NavbarMidPosition">
+			<div class="FirstNavbarMid">
+				{% block navbar %}
+					{% include 'navbar.html.twig' %}
+				{% endblock %}
+			</div>
+		</div>
+	</div>
+
+	<div class="d-flex justify-content-center mt-5 FirstSection">
+		<div id="carouselExampleCaptions" class="carousel slide">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				{% for game in games %}
+				<div class="carousel-item active">
+					<img src="{{ game.PictureGame }}" class="d-block w-100" alt="/assets/img/test.jpg">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>{{ game.NameGame }}</h5>
+						<p>{{ game.PriceGame }}€</p>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
 	</div>
 {% endblock %}
