--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><i class="fa-solid fa-house iconedeleo"></i></a>
+    <a class="navbar-brand" href="#"><i class="fa-solid fa-house"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,10 +22,10 @@
           <a class="nav-link">INSCRIPTION</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"><i class="fa-solid fa-basket-shopping"></i></a>
+          <a class="nav-link"><i class="fa-solid fa-basket-shopping fa-1x"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"><i class="fa-solid fa-magnifying-glass"></i></a>
+          <a class="nav-link"><i class="fa-solid fa-magnifying-glass fa-1x"></i></a>
         </li>
       </ul>
     </div>
