--- a/public/assets/sass/_forum.scss
+++ b/public/assets/sass/_forum.scss
@@ -122,6 +122,10 @@ footer {
             margin-left: 0;
         }
 
+        .roomCardTitle, .roomCardDate, .roomCardMessage {
+            margin-bottom: 0;
+        }
+
     }
 }
 
