--- a/templates/chat/new.html.twig
+++ b/templates/chat/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Chat{% endblock %}
+{% block title %}New Chat
+{% endblock %}
 
 {% block body %}
-    <h1>Create new Chat</h1>
+	<h4>Nouveau message</h4>
 
-    {{ include('chat/_form.html.twig') }}
+	{{ include('chat/_form.html.twig') }}
 
-    <a href="{{ path('app_chat_index') }}">back to list</a>
 {% endblock %}
