--- a/public/assets/sass/_chat.scss
+++ b/public/assets/sass/_chat.scss
@@ -1,3 +1,10 @@
-h4 {
-    color: aqua;
+textarea {
+    width: 100%;
+    height: 200px;
+    background-color: #1d1d1d;
+    color: #fff;
+}
+
+.chatFields {
+    display: none;
 }
