--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-			<link rel="stylesheet" href="/POG/public/assets/css/app.css">
+			<link rel="stylesheet" href="/assets/css/app.css">
 		{% endblock %}
 
 		{% block javascripts %}
