--- a/templates/room/show.html.twig
+++ b/templates/room/show.html.twig
@@ -4,68 +4,64 @@
 {% endblock %}
 
 {% block body %}
-	<table class="table">
-		<tbody>
-			{# <tr> #}
-			{# <th>Id</th> #}
-			{# <td>{{ room.id }}</td> #}
-			{# </tr> #}
-				<tr>
-					<td>
-						{% for user in users %}
-							{% if room.user.id == user.id %}
-							Discussion créée par
-						{{ user.pseudoUser }}
-					{% endif %}
-				{% endfor %}
-				</td>
-					<td>
-				{{ room.titleRoom }}
-				</td>
-					<td>
-					Le
-				{{ room.dateRoom ? room.dateRoom|date('d-m-Y') : '' }}
-			</td>
-			</tr>
-				<tr>
-					<td>
-				{{ room.contentRoom }}
-			</td>
-		</tr>
-	</tbody>
-	</table>
 
+	<header>
+		Logo + nav
+	</header>
 
-		<div class="chatMessages"> {% for chat in chats %}
-			{# Récupérer les commentaires et la date de la table Chat si l'id correspond #}
-			{% if room.id == chat.room.id %}
-				{# Récupérer le pseudo du user #}
+	<div class="container">
+		<div class="roomTitleContainer">
+			{# Id #}
+			{# {{ room.id }} #}
+
 				{% for user in users %}
-					{% if chat.user.id == user.id %}
+					{% if room.user.id == user.id %}
+					<img class="roomTitleContainerProfilPicture" src="{{ user.pictureUser }}" alt="Photo de profil"> {{ user.pseudoUser }}
+				{% endif %}
+			{% endfor %}
+			le
+			{{ room.dateRoom ? room.dateRoom|date('d-m-Y') : '' }}
+
+			{{ room.titleRoom }}
+
+			<p>
+				{{ room.contentRoom }}
+			</p>
+		</div>
+
+		<a href="{{ path('app_forum') }}">
+			Retourner sur le forum</a>
+
+		<div class="chatContainer">
+			{% for chat in chats %}
+				{# Récupérer les commentaires et la date de la table Chat si l'id correspond #}
+				{% if room.id == chat.room.id %}
+					{# Récupérer le pseudo du user #}
+					<div class="chatContainerMessage">
+						{% for user in users %}
+							{% if chat.user.id == user.id %}
+								<p>
+									<img class="chatContainerProfilPicture" src="{{ user.pictureUser }}" alt="Photo de profil">
+									{{ user.pseudoUser }}
+								{% endif %}
+							{% endfor %}
+							{{chat.date ? chat.date|date('d-m-Y : H:i') : '' }}
+						</p>
 						<p>
-							{{ user.pseudoUser }}
-						{% endif %}
-					{% endfor %}
+							{{chat.commentary}}
+						</p>
+					</div>
+				{% endif %}
+			{% endfor %}
+		</div>
 
-					{{chat.date ? chat.date|date('d-m-Y') : '' }}
-				</p>
-				<p>
-					{{chat.commentary}}
-				</p>
-			{% endif %}
-		{% endfor %}
+		<div class="container newMessage">
+			{{ include('chat/new.html.twig') }}
 
+		</div>
+
+		{# <a href="{{ path('app_room_index') }}">back to list</a> #}
+	{# <a href="{{ path('app_room_edit', {'id': room.id}) }}">edit</a> #}
+		{# {{ include('room/_delete_form.html.twig') }} #}
 	</div>
-
-	<div class="newMessage">
-		{{ include('chat/new.html.twig') }}
-	</div>
-	<a href="{{ path('app_forum') }}">
-		Retourner sur le forum</a>
-
-	{# <a href="{{ path('app_room_index') }}">back to list</a> #}
-
-{# <a href="{{ path('app_room_edit', {'id': room.id}) }}">edit</a> #}
-
-	{# {{ include('room/_delete_form.html.twig') }} #}
 {% endblock %}
