changement dossier pog

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -181,6 +181,7 @@ a:link, a:visited {
 .chatContainer {
   width: 100%;
   position: relative;
+  margin-bottom: 300px;
 }
 .chatContainer .chatContainerProfilPicture {
   width: 50px;
@@ -203,7 +204,7 @@ a:link, a:visited {
 .newMessage {
   position: fixed;
   bottom: 0;
-  border: 3px solid #FF5EBE;
+  border: 2px solid #FF5EBE;
   box-shadow: 0px 0px 15px rgba(255, 94, 190, 0.5);
   background-color: #252525;
 }
