--- a/public/assets/sass/navbar.scss
+++ b/public/assets/sass/navbar.scss
@@ -1,10 +1,10 @@
 $colors: red, orange, yellow, green, blue, rgba(255,0,153,0.9);
 
-@for $i from 1 through length($colors) {
-    .roomCard:nth-child(#{length($colors)}n+#{$i}) {
-        border-color: lighten(nth($colors, $i), 20%);
-    }
-}
+// @for $i from 1 through length($colors) {
+//     .roomCard:nth-child(#{length($colors)}n+#{$i}) {
+//         border-color: lighten(nth($colors, $i), 20%);
+//     }
+// }
 
 .LeoTest{
     background-color: #2125297e;
