--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -3,14 +3,6 @@ body {
   color: #fff;
 }
 
-header {
-  border-bottom: 1px solid blue;
-}
-
-footer {
-  border-top: 1px solid blue;
-}
-
 .forum__h1 {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-style: italic;
@@ -32,12 +24,14 @@ footer {
   box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   padding: 20px;
-  line-height: 25px;
+  line-height: 30px;
   width: 70%;
   margin: auto;
+  font-size: 20px;
 }
 .forumRules h4 {
   text-align: center;
+  line-height: 60px;
 }
 
 .forumRoomSearch {
@@ -122,8 +116,8 @@ footer {
 }
 
 .roomCard:nth-child(6n+3) {
-  border-color: #ffc966;
-  box-shadow: 0px 0px 15px #ffc966;
+  border-color: #ffb866;
+  box-shadow: 0px 0px 15px #ffb866;
 }
 
 .roomCard:nth-child(6n+4) {
@@ -165,8 +159,31 @@ a:link, a:visited {
   filter: drop-shadow(0px 0px 5px rgba(255, 94, 191, 0.925));
 }
 
+.newRoomContainer {
+  text-align: center;
+  font-size: 20px;
+  line-height: 50px;
+}
+
+.newRoomButton {
+  transition-duration: 0.4s;
+  padding: 0px 20px 0px 20px;
+  border: 2px solid #000000;
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  font-size: 30px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.newRoomButton:hover {
+  background-color: #008cff;
+  filter: drop-shadow(0px 0px 3px #008cff);
+  border: 2px solid #008cff;
+}
+
 .roomTitleContainer {
-  border: 3px solid #049be0;
+  border: 3px solid #008cff;
   box-shadow: 0px 0px 8px 8px rgba(4, 154, 241, 0.5);
   border-radius: 20px;
   margin: 100px 0px 100px 0px;
@@ -218,4 +235,26 @@ textarea {
 
 .chatFields {
   display: none;
+}
+
+.register__h1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: italic;
+  font-size: 60px;
+  line-height: 130px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #fff;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 42px rgb(230, 18, 124), 0 0 77px rgb(230, 18, 124), 0 0 100px rgb(230, 18, 124);
+}
+
+.register__legend {
+  font-size: 30px;
+  letter-spacing: 0.05em;
+  color: #00b7ff;
+}
+
+.register__button__submit {
+  margin: auto;
+  display: flex;
 }
