--- a/public/assets/sass/_room.scss
+++ b/public/assets/sass/_room.scss
@@ -1,5 +1,5 @@
 .roomTitleContainer {
-    border: 3px solid #049be0;
+    border: 3px solid #008cff;
     box-shadow: 0px 0px 8px 8px rgba(4, 154, 241, 0.5);
     border-radius: 20px;
     margin: 100px 0px 100px 0px;
