--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   background-color: #252525;
   color: #fff;
@@ -167,7 +168,8 @@ a:link, a:visited {
 
 .newRoomButton {
   transition-duration: 0.4s;
-  padding: 0px 20px 0px 20px;
+  margin: 0px 5px 0px 5px;
+  padding: 0px 15px 0px 15px;
   border: 2px solid #000000;
   box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
@@ -182,11 +184,47 @@ a:link, a:visited {
   border: 2px solid #008cff;
 }
 
+.room__button__returnForum {
+  background-color: #252525;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 25px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 50px;
+}
+
+.room__button__returnForum span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.room__button__returnForum span:after {
+  content: "«";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: -20px;
+  transition: 0.5s;
+}
+
+.room__button__returnForum:hover span {
+  padding-left: 25px;
+}
+
+.room__button__returnForum:hover span:after {
+  opacity: 1;
+  left: 0;
+}
+
 .roomTitleContainer {
   border: 3px solid #008cff;
   box-shadow: 0px 0px 8px 8px rgba(4, 154, 241, 0.5);
   border-radius: 20px;
-  margin: 100px 0px 100px 0px;
+  margin: 30px 0px 100px 0px;
   padding: 50px 50px 50px 50px;
 }
 .roomTitleContainer .roomTitleContainerProfilPicture {
@@ -224,6 +262,10 @@ a:link, a:visited {
   border: 2px solid #FF5EBE;
   box-shadow: 0px 0px 15px rgba(255, 94, 190, 0.5);
   background-color: #252525;
+}
+
+.room__ifNotConnected {
+  text-align: center;
 }
 
 textarea {
