--- a/public/assets/sass/_forum.scss
+++ b/public/assets/sass/_forum.scss
@@ -167,7 +167,8 @@ a:link, a:visited {
 
 .newRoomButton {
     transition-duration: 0.4s;
-    padding: 0px 20px 0px 20px;
+    margin: 0px 5px 0px 5px;
+    padding: 0px 15px 0px 15px;
     border: 2px solid #000000;
     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
