--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,32 +21,12 @@
 		</div>
 	</div>
 
-	<div class="d-flex justify-content-center mt-5 FirstSection">
-		<div id="carouselExampleCaptions" class="carousel slide">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			</div>
-			<div class="carousel-inner">
-				{% for game in games %}
-				<div class="carousel-item active">
-					<img src="{{ game.PictureGame }}" class="d-block w-100" alt="/assets/img/test.jpg">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>{{ game.NameGame }}</h5>
-						<p>{{ game.PriceGame }}€</p>
-					</div>
-				</div>
-				{% endfor %}
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
-	</div>
+	{% block carousel %}
+		{% include 'home/carousel.html.twig' %}
+	{% endblock %}
+
+	{% block categoriesDisplay %}
+		{% include 'home/categoriesDisplay.html.twig' %}
+	{% endblock %}
+	
 {% endblock %}
