--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,12 +21,32 @@
 		</div>
 	</div>
 
-	{% block carousel %}
-		{% include 'home/carousel.html.twig' %}
-	{% endblock %}
+	<div class="gameCarousel">
+		{% block carousel %}
+			{% include 'home/carousel.html.twig' %}
+		{% endblock %}
+	</div>
 
-	{% block categoriesDisplay %}
-		{% include 'home/categoriesDisplay.html.twig' %}
-	{% endblock %}
-	
+	<div class="categories">
+		{% block categoriesDisplay %}
+			{% include 'home/categoriesDisplay.html.twig' %}
+		{% endblock %}
+		<div class="text-center">
+			<a href="#">Afficher plus ...</a>
+		</div>
+	</div>
+
+	<div class="d-flex align-items-center justify-content-center m-5 gameSelectedDescr">
+		{% for game in games|slice(0, 1) %}
+			<img src="{{ game.PictureGame }}" alt="">
+		<div class="d-flex flex-column align-items-center m-5 homeGameDescr">
+			<h3>Nom: {{ game.NameGame }} (Pegi {{ game.Pegi.ValuePegi }})</h3>
+			<h5>Date de sortie: {{ game.ReleaseDateGame|date('d-m-Y') }}</h5>
+			<h5>Developement: {{ game.Development.NameDevelopment }}</h5>
+			<h5>Edition: {{ game.Edition.NameEdition }}</h5>
+			<h5>Prix: {{ game.PriceGame }}€</h5>
+		</div>
+		{% endfor %}
+	</div>
+
 {% endblock %}
