--- a/public/assets/sass/home.scss
+++ b/public/assets/sass/home.scss
@@ -6,7 +6,6 @@
 //     }
 // }
 .LeoTest{
-    background-color: #2125297e;
     position: absolute;
     img{
         width: 1900px;
@@ -86,4 +85,22 @@
     -webkit-box-shadow:0px 0px 20px 10px rgba(255,0,153,0.9);
     -moz-box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
     box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
+}
+
+.homeGameDescr{
+    -webkit-box-shadow:0px 0px 20px 10px rgba(255,0,153,0.9);
+    -moz-box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
+    box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
+    border-radius: 25px;
+    margin: 20px;
+    width: 50%;
+    height: 350px;
+    img{
+        -webkit-box-shadow:0px 0px 20px 10px rgba(255,0,153,0.9);
+        -moz-box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
+        box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
+        position: relative;
+        right: 100px;
+        border-radius: 25px;
+    }
 }
