--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -74,6 +74,7 @@
   margin: 20px;
   width: 50%;
   height: 350px;
+  margin: 10rem 0;
 }
 .homeGameDescr img {
   box-shadow: 0px 0px 20px 10px rgba(255, 0, 153, 0.9);
