--- a/public/assets/sass/home.scss
+++ b/public/assets/sass/home.scss
@@ -95,6 +95,7 @@
     margin: 20px;
     width: 50%;
     height: 350px;
+    margin: 10rem 0;
     img{
         -webkit-box-shadow:0px 0px 20px 10px rgba(255,0,153,0.9);
         -moz-box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
