--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,7 +37,7 @@
 	</div>
 
 	<div class="d-flex justify-content-center">
-		<div class="d-flex align-items-center m-5 homeGameDescr">
+		<div class="d-flex align-items-center homeGameDescr">
 			{% for game in games|slice(0, 1) %}
 				<img src="{{ game.PictureGame }}" alt="">
 			<div class="d-flex flex-column align-items-center m-5">
