--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,28 +17,33 @@
 			</div>
 		{% endif %}
 
-		<h1 class="h3 mb-3 font-weight-normal">Connectez vous</h1>
-		<label for="inputEmail">Email</label>
-		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label for="inputPassword">Mot de passe</label>
-		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+		<div class="container">
+			<h1 class="login__h1 h3 mb-3 font-weight-normal">Connectez-vous</h1>
+			<label for="inputEmail">Email</label>
+			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+			<label class="mt-3" for="inputPassword">Mot de passe</label>
+			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+			<input
+			type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-		{#
-								        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-								        See https://symfony.com/doc/current/security/remember_me.html
-								
-								        <div class="checkbox mb-3">
-								            <label>
-								                <input type="checkbox" name="_remember_me"> Remember me
-								            </label>
-								        </div>
-								    #}
+{#
+Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+See https://symfony.com/doc/current/security/remember_me.html
 
-		<button class="btn btn-lg btn-primary" type="submit">
-			Se connecter
-		</button>
-	</form>
+<div class="checkbox mb-3">
+<label>
+<input type="checkbox" name="_remember_me"> Remember me
+</label>
+</div>
+#}
+
+			<button class="login__button__submit btn btn-lg btn-primary mt-5" type="submit">
+				Se connecter
+			</button>
+			<button class="login__button__submit btn btn-lg btn-primary mt-5" type="submit">
+				Mot de passe oublié ?
+			</button>
+		</form>
+	</div>
 {% endblock %}
