--- a/public/assets/sass/_login.scss
+++ b/public/assets/sass/_login.scss
@@ -8,7 +8,7 @@
 
     color: #fff;
     text-shadow:  0 0 7px #fff, 
-        0 0 10px #fff, 
+        0 0 2px #fff, 
         0 0 42px rgb(230, 18, 124),   
         0 0 77px rgb(230, 18, 124), 
         0 0 100px rgb(230, 18, 124) 
@@ -17,4 +17,8 @@
 .login__button__submit {
     margin: auto;
     display: flex;
+}
+
+.login__passforgot {
+    text-align: center;
 }
