--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -14,7 +14,7 @@
     <p>Si vous ne recevez pas d'e-mail, merci de vérifier vos spam ou <a href="{{ path('app_forgot_password_request') }}">réessayez</a>.</p>
 
 
-	<a href="{{ path('app_home')}}" class="btn btn-primary mt-5">Retourner à la page d'accueil<a>
+	<a href="{{ path('app_login')}}" class="btn btn-primary mt-5">Retourner à la page de connexion<a>
 
 </div>
 {% endblock %}
