--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,7 +41,7 @@ See https://symfony.com/doc/current/security/remember_me.html
 			<button class="login__button__submit btn btn-lg btn-primary mt-5" type="submit">
 				Se connecter
 			</button>
-
+	</form>
 			<div class="login__passforgot mt-5">
 			<a href="{{ path('app_forgot_password_request')}}" >Mot de passe oublié ?<a>
 			<div>
