--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -61,6 +61,7 @@
 }
 .categoryDiv h3 {
   color: white;
+  text-shadow: 4px 4px 0px black;
 }
 
 .categoryDiv:hover {
@@ -69,6 +70,7 @@
 }
 
 .homeGameDescr {
+  transition: all 0.5s ease-in-out;
   box-shadow: 0px 0px 20px 10px rgba(255, 0, 153, 0.9);
   border-radius: 25px;
   margin: 20px;
@@ -81,4 +83,10 @@
   position: relative;
   right: 100px;
   border-radius: 25px;
+}
+
+.gameDiv {
+  width: 375px;
+  height: 200px;
+  margin: 0;
 }/*# sourceMappingURL=home.css.map */
