--- a/public/assets/sass/home.scss
+++ b/public/assets/sass/home.scss
@@ -77,6 +77,7 @@
     cursor: pointer;
     h3{
         color: white;
+        text-shadow: 4px 4px 0px black;
     }
 }
 
@@ -88,6 +89,7 @@
 }
 
 .homeGameDescr{
+    transition: all 0.5s ease-in-out;
     -webkit-box-shadow:0px 0px 20px 10px rgba(255,0,153,0.9);
     -moz-box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
     box-shadow: 0px 0px 20px 10px rgba(255,0,153,0.9);
@@ -104,4 +106,10 @@
         right: 100px;
         border-radius: 25px;
     }
+}
+
+.gameDiv{
+    width: 375px;
+    height: 200px;
+    margin: 0;
 }
